--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "/anime API project/functions/api.js",
   "scripts": {
     "start": "nodemon api.js",
+    "build": "netlify deploy --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
